V1.2
- add a simple way to add (attach) or remove (detach) a device from an XML list
- remove edit from command list (no way to edit a group of VM:) )

V1.1
- various fix in non-interactive mode

V1.0
- improve checks (especially around yaml file)
- default file groups.yaml will be used is available in present path
- improve layout
- some typo fixes

V0.9
- add some xml files
- validate the yaml file
- add xen+ssh in list of connector

V0.8
- improve layout with some color
- prompt now display: selected group, yaml file, connector
- prompt uses color to help determine whats wrong
- completion: show list of yaml file in current path

V0.7
- use argparse instead of optparse (deprecated)
- various pylint fix
- add a show command launche on VM option (default is off)
- add more doc in the code

V0.6
- add an option to select the connector to the hypervisor: ssh or local
- import sys (needed for LibVirtConnect)
- prompt now show the connector
- update README.md

V0.5
- Final version 0.5
- various fixes after some QA...

V0.4
- add class LibVirtConnect
- using libvirt api to connect to hypervisor
- vm_selected: show all VM selected by the group


V0.3
- first stable release